--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth-api-phone:17.5.1'
     implementation 'com.google.firebase:firebase-database:20.0.4'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.sun.mail:android-mail:1.6.2'
+    implementation 'com.sun.mail:android-activation:1.6.2'
+    //Add those line in dependencies
 
 }
