--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +22,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PawCare"
         tools:targetApi="31">
+        <activity
+            android:name=".activity_care"
+            android:exported="false" />
+        <activity
+            android:name=".activity_faqs"
+            android:exported="false" />
+        <activity
+            android:name=".activity_menu"
+            android:exported="false" />
+        <activity
+            android:name=".activity_policy"
+            android:exported="false" />
         <activity
             android:name=".activity_tenth"
             android:exported="false" />
